[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-sre-autopilot"
version = "0.1.0"
description = "SRE Autopilot Environment for OpenEnv - production incident response simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]==0.2.1",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "sre_env.server.app:main"


[tool.setuptools]
packages = ["sre_env", "sre_env.server"]
package-dir = { "sre_env" = ".", "sre_env.server" = "server" }
